--- a/Miyu/MainTab.storyboard
+++ b/Miyu/MainTab.storyboard
@@ -54,7 +54,7 @@
         <scene sceneID="5e3-qe-EnT">
             <objects>
                 <viewControllerPlaceholder storyboardName="UploadViewController" id="WLZ-JZ-7hx" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="Rtd-S7-BcZ"/>
+                    <tabBarItem key="tabBarItem" title="Upload" id="Rtd-S7-BcZ"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="se7-0e-EyJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -64,7 +64,7 @@
         <scene sceneID="W20-WP-jbQ">
             <objects>
                 <viewControllerPlaceholder storyboardName="ExploreViewController" id="ntb-QB-yWQ" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="Yjw-7Q-liO"/>
+                    <tabBarItem key="tabBarItem" title="Explore" id="Yjw-7Q-liO"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Buw-8l-PdW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
