--- a/Miyu/Feature/Profile/ProfileViewController.storyboard
+++ b/Miyu/Feature/Profile/ProfileViewController.storyboard
@@ -13,7 +13,7 @@
         <!--Profile-->
         <scene sceneID="nhe-0s-ivT">
             <objects>
-                <viewController id="cn7-xV-1xf" customClass="ProfileViewController" customModule="Miyu" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ProfileViewController" id="cn7-xV-1xf" customClass="ProfileViewController" customModule="Miyu" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="yTZ-vK-8PS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
