--- a/Miyu/Feature/Homepage/HomepageCell/HomepageTableViewCell.xib
+++ b/Miyu/Feature/Homepage/HomepageCell/HomepageTableViewCell.xib
@@ -13,7 +13,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="721" id="KGk-i7-Jjw" customClass="HomepageTableViewCell" customModule="Simi" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="721" id="KGk-i7-Jjw" customClass="HomepageTableViewCell" customModule="Miyu" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="585" height="721"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -80,7 +80,7 @@
                             </label>
                         </subviews>
                     </stackView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="random_1" translatesAutoresizingMaskIntoConstraints="NO" id="rcd-P5-2X9">
+                    <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="random_1" translatesAutoresizingMaskIntoConstraints="NO" id="rcd-P5-2X9">
                         <rect key="frame" x="46" y="15" width="121" height="94"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="121" id="Ffd-7c-i8O"/>
@@ -145,6 +145,7 @@
                 <outlet property="nameLabel" destination="rR8-HI-NhL" id="Rld-op-BGl"/>
                 <outlet property="profileImage" destination="rcd-P5-2X9" id="qLb-o5-Cam"/>
                 <outlet property="ratingLabel" destination="u2w-gT-dze" id="K1K-6r-oJQ"/>
+                <outlet property="ratingView" destination="rC0-b4-6Qh" id="n9e-KF-mjE"/>
                 <outlet property="recentCommentLabel" destination="u25-yq-zaZ" id="j6s-HU-7nn"/>
             </connections>
             <point key="canvasLocation" x="13.5" y="234.5"/>
