--- a/Miyu/Feature/Register/RegisterViewController.storyboard
+++ b/Miyu/Feature/Register/RegisterViewController.storyboard
@@ -44,7 +44,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
-                                    <barButtonItem title="back" id="kWq-5a-wmb"/>
+                                    <barButtonItem title="back" id="kWq-5a-wmb">
+                                        <connections>
+                                            <action selector="backButtonTapped:" destination="XFn-ID-2np" id="QS5-oc-Ob2"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uDL-Ov-lWR">
