--- a/Miyu/Feature/Homepage/HomepageCell/HomepageTableViewCell.xib
+++ b/Miyu/Feature/Homepage/HomepageCell/HomepageTableViewCell.xib
@@ -13,42 +13,42 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="1129" id="KGk-i7-Jjw" customClass="HomepageTableViewCell" customModule="Miyu" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="812" height="1129"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="1195" id="KGk-i7-Jjw" customClass="HomepageTableViewCell" customModule="Miyu" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="892" height="1195"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="812" height="1128.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="892" height="1194.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Picture description and other good stuff caption stuff and stuff here" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DUD-j2-8Nf">
-                        <rect key="frame" x="30" y="100.5" width="722" height="20.5"/>
+                        <rect key="frame" x="10" y="90" width="872" height="47"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dog" translatesAutoresizingMaskIntoConstraints="NO" id="JSI-uK-gow">
-                        <rect key="frame" x="0.0" y="141" width="812" height="812"/>
+                        <rect key="frame" x="10" y="147" width="872" height="872"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="JSI-uK-gow" secondAttribute="height" multiplier="1:1" id="YAO-JN-aOi"/>
+                            <constraint firstAttribute="width" secondItem="JSI-uK-gow" secondAttribute="height" multiplier="1:1" id="Elc-fE-45g"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="* 1000 people rated this" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IZH-B9-b1W">
-                        <rect key="frame" x="30" y="958" width="184" height="20.5"/>
+                        <rect key="frame" x="10" y="1024" width="184" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L1p-DO-jn8" userLabel="Comment Header">
-                        <rect key="frame" x="30" y="988.5" width="727" height="19.5"/>
+                        <rect key="frame" x="10" y="1054.5" width="827" height="20.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Comments(25)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JcK-cd-6Bg">
-                                <rect key="frame" x="0.0" y="0.0" width="578.5" height="19.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="678.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Susan Boller: &quot;YAY&quot;" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u25-yq-zaZ">
-                                <rect key="frame" x="578.5" y="0.0" width="148.5" height="19.5"/>
+                                <rect key="frame" x="678.5" y="0.0" width="148.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -56,7 +56,7 @@
                         </subviews>
                     </stackView>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rC0-b4-6Qh" customClass="CosmosView" customModule="Cosmos">
-                        <rect key="frame" x="246" y="1028.5" width="320" height="60"/>
+                        <rect key="frame" x="286" y="1095" width="320" height="60"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="color" keyPath="filledColor">
@@ -82,15 +82,15 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
-                    <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="random_1" translatesAutoresizingMaskIntoConstraints="NO" id="rcd-P5-2X9">
-                        <rect key="frame" x="30" y="20" width="60" height="60.5"/>
+                    <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="random_1" translatesAutoresizingMaskIntoConstraints="NO" id="rcd-P5-2X9">
+                        <rect key="frame" x="10" y="20" width="60" height="60"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="rcd-P5-2X9" secondAttribute="height" multiplier="1:1" id="JQr-u4-suk"/>
                             <constraint firstAttribute="height" constant="60" id="PYU-vC-7JM"/>
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="1Hx-jD-0Ob" userLabel="Header">
-                        <rect key="frame" x="100" y="10" width="102" height="75.5"/>
+                        <rect key="frame" x="80" y="10" width="102" height="75.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rR8-HI-NhL">
                                 <rect key="frame" x="0.0" y="0.0" width="102" height="48"/>
@@ -118,18 +118,18 @@
                     <constraint firstItem="1Hx-jD-0Ob" firstAttribute="leading" secondItem="rcd-P5-2X9" secondAttribute="trailing" constant="10" id="32W-ng-qct"/>
                     <constraint firstItem="L1p-DO-jn8" firstAttribute="leading" secondItem="IZH-B9-b1W" secondAttribute="leading" id="5aC-pS-Jc6"/>
                     <constraint firstItem="IZH-B9-b1W" firstAttribute="top" secondItem="JSI-uK-gow" secondAttribute="bottom" constant="5" id="7D2-xE-OTI"/>
-                    <constraint firstItem="IZH-B9-b1W" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="7Tj-4l-R56"/>
-                    <constraint firstItem="DUD-j2-8Nf" firstAttribute="top" secondItem="rcd-P5-2X9" secondAttribute="bottom" constant="20" id="CYD-it-HOP"/>
+                    <constraint firstItem="IZH-B9-b1W" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="7Tj-4l-R56"/>
+                    <constraint firstItem="DUD-j2-8Nf" firstAttribute="top" secondItem="rcd-P5-2X9" secondAttribute="bottom" constant="10" id="CYD-it-HOP"/>
                     <constraint firstItem="1Hx-jD-0Ob" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="CeJ-Vd-Uw3"/>
+                    <constraint firstItem="DUD-j2-8Nf" firstAttribute="trailing" secondItem="JSI-uK-gow" secondAttribute="trailing" id="DAH-zC-mdf"/>
                     <constraint firstItem="rcd-P5-2X9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="DaD-FD-f3x"/>
                     <constraint firstItem="L1p-DO-jn8" firstAttribute="top" secondItem="IZH-B9-b1W" secondAttribute="bottom" constant="10" id="GuN-fh-mPk"/>
-                    <constraint firstItem="JSI-uK-gow" firstAttribute="top" secondItem="DUD-j2-8Nf" secondAttribute="bottom" constant="20" id="JXE-2o-5G2"/>
-                    <constraint firstItem="DUD-j2-8Nf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="Wo0-bS-Pc9"/>
-                    <constraint firstAttribute="trailing" secondItem="JSI-uK-gow" secondAttribute="trailing" id="aYj-rQ-qup"/>
-                    <constraint firstItem="rcd-P5-2X9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="br8-6s-gcx"/>
-                    <constraint firstItem="JSI-uK-gow" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="cbE-mh-eB6"/>
+                    <constraint firstItem="JSI-uK-gow" firstAttribute="top" secondItem="DUD-j2-8Nf" secondAttribute="bottom" constant="10" id="JXE-2o-5G2"/>
+                    <constraint firstItem="DUD-j2-8Nf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="Wo0-bS-Pc9"/>
+                    <constraint firstAttribute="trailing" secondItem="JSI-uK-gow" secondAttribute="trailing" constant="10" id="aYj-rQ-qup"/>
+                    <constraint firstItem="rcd-P5-2X9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="br8-6s-gcx"/>
+                    <constraint firstItem="JSI-uK-gow" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="cbE-mh-eB6"/>
                     <constraint firstItem="rC0-b4-6Qh" firstAttribute="top" secondItem="L1p-DO-jn8" secondAttribute="bottom" constant="20" id="d3K-KL-u3O"/>
-                    <constraint firstAttribute="trailing" secondItem="DUD-j2-8Nf" secondAttribute="trailing" constant="60" id="fF0-Nq-4sO"/>
                     <constraint firstAttribute="bottom" secondItem="rC0-b4-6Qh" secondAttribute="bottom" constant="40" id="lJl-te-zJn"/>
                     <constraint firstAttribute="trailing" secondItem="L1p-DO-jn8" secondAttribute="trailing" constant="55" id="mTt-HP-l01"/>
                 </constraints>
@@ -142,11 +142,11 @@
                 <outlet property="contentImage" destination="JSI-uK-gow" id="86W-b8-oT5"/>
                 <outlet property="nameLabel" destination="rR8-HI-NhL" id="Rld-op-BGl"/>
                 <outlet property="profileImage" destination="rcd-P5-2X9" id="qLb-o5-Cam"/>
-                <outlet property="ratingLabel" destination="u2w-gT-dze" id="K1K-6r-oJQ"/>
                 <outlet property="ratingView" destination="rC0-b4-6Qh" id="n9e-KF-mjE"/>
                 <outlet property="recentCommentLabel" destination="u25-yq-zaZ" id="j6s-HU-7nn"/>
+                <outlet property="userRatingLabel" destination="u2w-gT-dze" id="zhd-N2-Ayh"/>
             </connections>
-            <point key="canvasLocation" x="127" y="338.5"/>
+            <point key="canvasLocation" x="118" y="371.5"/>
         </tableViewCell>
     </objects>
     <resources>
